--- a/src/main/resources/sslReportApp/index.html
+++ b/src/main/resources/sslReportApp/index.html
@@ -16,6 +16,7 @@
 <script src="lib/jquery-2.1.4.min.js"></script>
 <script src="lib/jquery.json.min.js"></script>
 <script src="lib/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
+<script src="script/SSLReport.js"></script>
 <script src="script/app.js"></script>
 </head>
 
