--- a/src/main/resources/sslReportApp/index.html
+++ b/src/main/resources/sslReportApp/index.html
@@ -132,6 +132,9 @@
 </script>
 
 <script type="text/html" id="certificateFormTemplate">
+<div class="panel panel-default">
+  <div class="panel-heading"></div>
+  <div class="panel-body">
 	<form class="form-horizontal">
 		<div class="form-group">
 			<label for="out_order" class="col-sm-4 control-label">Send in order: </label>
@@ -200,6 +203,8 @@
 			</div>
 		</div>
 	</form>
+  </div>
+</div>
 </script>
 
 </html>
