replace webName with host

--- a/src/main/resources/sslReportApp/index.html
+++ b/src/main/resources/sslReportApp/index.html
@@ -30,8 +30,8 @@
 		<div class="row">
 			<form class="form-inline">
 				<div class="form-group">
-					<label for="webName">WebName:</label> <input type="text"
-						id="webName" class="form-control"
+					<label for="host">Host:</label> <input type="text"
+						id="host" class="form-control"
 						placeholder="e.g. www.googel.com">
 				</div>
 				<div class="form-group">
@@ -57,9 +57,9 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<label for="out_webName" class="col-sm-4 control-label">Web-Name:</label>
+						<label for="out_host" class="col-sm-4 control-label">Host:</label>
 						<div class="col-sm-8">
-							<p class="form-control-static" id="out_webName"></p>
+							<p class="form-control-static" id="out_host"></p>
 						</div>
 					</div>
 					<div class="form-group">
