add multiple reports

--- a/src/main/resources/sslReportApp/index.html
+++ b/src/main/resources/sslReportApp/index.html
@@ -38,6 +38,7 @@ SOFTWARE.
 <script src="lib/jquery-2.1.4.min.js"></script>
 <script src="lib/jquery.json.min.js"></script>
 <script src="lib/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
+<script src="script/SlidablePanel.js"></script>
 <script src="script/SSLReport.js"></script>
 <script src="script/app.js"></script>
 </head>
@@ -89,8 +90,6 @@ SOFTWARE.
 <div class="panel panel-default" id="reportOutput">
 	<div class="panel-heading">
 		<h3 class="panel-title"></h3>
-		<span class="pull-right clickable"><i
-			class="glyphicon glyphicon-chevron-up"></i></span>
 	</div>
 	<div class="panel-body">
 		<div class="page-header">
