add axja loader

--- a/src/main/resources/sslReportApp/index.html
+++ b/src/main/resources/sslReportApp/index.html
@@ -72,6 +72,10 @@ SOFTWARE.
 			</div>
 		</div>
 		<div class="row">
+			<div id="alert">
+			</div>
+		</div>
+		<div class="row">
 			<div class="btn-group" role="group" aria-label=""
 				id="reportButtonGroup">
 				<button class="btn btn-default" id="newReport">
