changeover to spring boot

--- a/src/main/resources/static/sslReportApp/index.html
+++ b/src/main/resources/static/sslReportApp/index.html
@@ -31,16 +31,16 @@ SOFTWARE.
 <title>SSLReport Web Interface</title>
 
 <link rel="stylesheet"
-	href="lib/bootstrap-3.3.5-dist/css/bootstrap.min.css" />
+	href="../sslReportApp/lib/bootstrap-3.3.5-dist/css/bootstrap.min.css" />
 <link rel="stylesheet"
-	href="lib/bootstrap-3.3.5-dist/css/bootstrap-theme.min.css" />
+	href="../sslReportApp/lib/bootstrap-3.3.5-dist/css/bootstrap-theme.min.css" />
 
-<script src="lib/jquery-2.1.4.min.js"></script>
-<script src="lib/jquery.json.min.js"></script>
-<script src="lib/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
-<script src="script/SlidablePanel.js"></script>
-<script src="script/SSLReport.js"></script>
-<script src="script/app.js"></script>
+<script src="../sslReportApp/lib/jquery-2.1.4.min.js"></script>
+<script src="../sslReportApp/lib/jquery.json.min.js"></script>
+<script src="../sslReportApp/lib/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
+<script src="../sslReportApp/script/SlidablePanel.js"></script>
+<script src="../sslReportApp/script/SSLReport.js"></script>
+<script src="../sslReportApp/script/app.js"></script>
 </head>
 
 <body>
